<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="5dp"
    android:background="@color/popup_bg"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/replace_background"
        android:textSize="16sp"
        android:textColor="@color/font_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view" />

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view" />

    <TextView
        android:id="@+id/select_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/select_photo"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="@color/bg_view" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="18sp" />
</LinearLayout>