<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/cancel_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/cancel"
            android:textColor="@color/font_white"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_message"
            android:textColor="@color/font_white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/send"
            android:textColor="@color/font_white"
            android:textSize="17sp"
            android:background="@drawable/send_message"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"/>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/message_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_bg"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="start"
        android:textColor="@color/font_gray"
        android:hint="@string/message_content_hint"
        />

</LinearLayout>