<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/app_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/copyright"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:src="@mipmap/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/app_image"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/app_image"
        android:layout_toRightOf="@+id/app_image"
        android:text="@string/welcome_title"
        android:textColor="@color/font_black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/app_image"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/app_image"
        android:layout_toRightOf="@+id/app_image"
        android:text="@string/welcome_sub_title"
        android:textColor="@color/font_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/copyright"
        android:textColor="@color/font_gray"
        android:textSize="12sp" />
</RelativeLayout>
