<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/message_user_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/cat" />

    <TextView
        android:id="@+id/message_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/message_user_photo"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/message_user_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/message_send_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/message_user_photo"
        android:layout_alignLeft="@id/message_user_name"
        android:layout_alignStart="@id/message_user_name"
        android:text="@string/message_send_time"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/message_send_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/message_send_time"
        android:layout_alignStart="@id/message_send_time"
        android:layout_below="@id/message_user_photo"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/comment_send"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@id/message_send_time"
        android:layout_alignStart="@id/message_send_time"
        android:layout_below="@id/message_send_content"
        android:layout_marginTop="16dp"
        android:background="@color/line" />

</RelativeLayout>