<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/gray"
    android:orientation="vertical">

    <EditText
        android:id="@+id/news_comment"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_bg"
        android:gravity="start"
        android:hint="@string/news_comment"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/font_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/send_message"
            android:padding="2dp"
            android:text="@string/comment_send"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@id/send"
            android:layout_toStartOf="@id/send"
            android:background="@drawable/send_message"
            android:padding="2dp"
            android:text="@string/comment_cancel"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>