<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/login_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:src="@mipmap/back_arrow"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/font_white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">
        <!--TextInputLayout里面只能包含一个子元素-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_login_phone"
                android:inputType="phone"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_identifying_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_identifying_code"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/user_send_message"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/send_message_bg_blue"
            android:gravity="center"
            android:text="@string/user_send_code"
            android:textSize="20sp" />

        <Button
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>